--- a/.render.yaml
+++ b/.render.yaml
@@ -4,5 +4,5 @@ services:
     env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python bot.py"
-    pythonVersion: 3. 8.12
+    pythonVersion: 3.8.12
     
