--- a/.render.yaml
+++ b/.render.yaml
@@ -3,6 +3,6 @@ services:
     name: telegram-bot-bd
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python bot.py"
+    startCommand: "python main.py"
     pythonVersion: 3.8.12
     
